--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.2",
+    "eas": "^0.1.0",
+    "expo": "~51.0.11",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "expo-router": "~3.5.16",
+    "react-native-animatable": "^1.4.0",
+    "react-native-otp-entry": "^1.7.0",
+    "react-native-otp-textinput": "^1.1.6",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-constants": "~16.0.2"
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
