--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-date-picker": "^5.0.4",
+    "react-native-elements": "^3.4.3",
     "react-native-otp-entry": "^1.7.0",
     "react-native-otp-textinput": "^1.1.6",
     "react-native-phone-number-input": "^2.1.0",
