--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "expo-image-picker": "~15.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
