--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.7.7",
+    "@reduxjs/toolkit": "^2.2.6",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.2",
     "eas": "^0.1.0",
     "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
+    "expo-image-picker": "~15.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
@@ -33,7 +35,7 @@
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-splash-screen": "^3.3.0",
-    "expo-image-picker": "~15.0.6"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
