--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "^2.7.7",
     "@reduxjs/toolkit": "^2.2.6",
     "@rneui/base": "^4.0.0-rc.7",
@@ -27,8 +28,10 @@
     "react-native-animatable": "^1.4.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-elements": "^3.4.3",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-entry": "^1.7.0",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-paper": "^5.12.3",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
